--- a/css/contextMenu/jquery.contextMenu.css
+++ b/css/contextMenu/jquery.contextMenu.css
@@ -10,13 +10,13 @@
 	display: none;
 }
 
-.contextMenu LI {
+.contextMenu li {
 	list-style: none;
 	padding: 0px;
 	margin: 0px;
 }
 
-.contextMenu A {
+.contextMenu a {
 	color: #333;
 	text-decoration: none;
 	display: block;
@@ -29,34 +29,34 @@
 	padding-left: 28px;
 }
 
-.contextMenu LI.hover A {
+.contextMenu li.hover a {
 	color: #FFF;
 	background-color: #3399FF;
 }
 
-.contextMenu LI.disabled A {
-	color: #AAA;
+.contextMenu li.disabled a {
+	color: #aaa;
 	cursor: default;
 }
 
-.contextMenu LI.hover.disabled A {
+.contextMenu li.hover.disabled a {
 	background-color: transparent;
 }
 
-.contextMenu LI.separator {
+.contextMenu li.separator {
 	border-top: solid 1px #CCC;
 }
 
 /*
-	Adding Icons
+	adding Icons
 	
 	You can add icons to the context menu by adding
-	classes to the respective LI element(s)
+	classes to the respective li element(s)
 */
 
-.contextMenu LI.edit A { background-image: url(images/page_white_edit.png); }
-.contextMenu LI.cut A { background-image: url(images/cut.png); }
-.contextMenu LI.copy A { background-image: url(images/page_white_copy.png); }
-.contextMenu LI.paste A { background-image: url(images/page_white_paste.png); }
-.contextMenu LI.delete A { background-image: url(images/page_white_delete.png); }
-.contextMenu LI.quit A { background-image: url(images/door.png); }
+.contextMenu li.edit a { background-image: url(images/page_white_edit.png); }
+.contextMenu li.cut a { background-image: url(images/cut.png); }
+.contextMenu li.copy a { background-image: url(images/page_white_copy.png); }
+.contextMenu li.paste a { background-image: url(images/page_white_paste.png); }
+.contextMenu li.delete a { background-image: url(images/page_white_delete.png); }
+.contextMenu li.quit a { background-image: url(images/door.png); }
